# ninja-rlm-chat-app

./: .env.example  .gitignore  DEPLOYMENT.md  Deploy app.md  Deploy dependencies.md  PUBLIC_ACCESS.md  README.md  deploy.sh  pyproject.toml  start-public.sh
backend/: __init__.py  config.py  main.py  requirements.txt
backend/api/: schemas.py
backend/api/routes/: chat.py  documents.py  models.py  sessions.py
backend/services/: document_service.py  progress_emitter.py  rlm_service.py  session_service.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentPanel.tsx  Header.tsx  LandingPage.tsx  ProgressPanel.tsx  ResizeHandle.tsx  Sidebar.tsx
frontend/src/hooks/: useProgress.ts
frontend/src/lib/: api.ts  types.ts
rlm/clients/: anthropic.py
rlm/core/: rlm.py
rlm/utils/: parsing.py  prompts.py
